# sr-robot3

./: Makefile  README.md  pyproject.toml
.github/workflows/: test_build.yml
sr/robot/: __init__.py  arduino.py  astoria.py  camera.py  exceptions.py  game_specific.py  kch.py  logging.py  marker.py  motor_board.py  mqtt.py  power_board.py  py.typed  raw_serial.py  robot.py  serial_wrapper.py  servo_board.py  timeout.py  utils.py
sr/robot3/: __init__.py  arduino.py  astoria.py  camera.py  exceptions.py  game_specific.py  kch.py  motor_board.py  mqtt.py  power_board.py  raw_serial.py  robot.py  serial_wrapper.py  servo_board.py  timeout.py  utils.py
sr/robot3/simulator/: camera.py  time_server.py
stubs/RPi/: GPIO.pyi
tests/: __init__.py  conftest.py  test_arduino.py  test_logging.py  test_markers.py  test_metadata.py  test_motor_board.py  test_power_board.py  test_raw_serial.py  test_serial_wrapper.py  test_servo_board.py  test_sr_robot.py  test_timeout.py
tests/test_data/: marker_detections.json  marker_locations.csv
tests/test_data/timeout_scripts/: catch-base-exception.py  catch-exception.py  hot-loop.py  sleep.py  try-finally.py
tests/test_data/timeout_scripts_extra/: early-exit.py  exception.py
